syntax = "proto3";

option go_package = "./";

package frontend;

service CharacterCounter {
  rpc CountCharacters (CountCharactersRequest) returns (CountCharactersResponse) {}
}

// The request message containing the text
message CountCharactersRequest {
  string text = 1;
}

// The response message containing the number characters
message CountCharactersResponse {
  uint64 characters = 1;
}
